--- a/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane fx:id="pane" prefHeight="720.0" prefWidth="1280.0" styleClass="userZoneBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.AdminMenu.AdminMenuController">
    <children>
-       <MenuBar  prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
+       <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
@@ -32,5 +32,7 @@
        <Button layoutX="203.0" layoutY="321.0" onMouseClicked="#editPersonalInfo" prefHeight="27.0" prefWidth="190.0" styleClass="greyButton" text="edit personal info"> </Button>
       <ImageView fx:id="adminImage" fitHeight="161.0" fitWidth="200.0" layoutX="203.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="personalInfo" layoutX="203.0" layoutY="394.0" prefHeight="288.0" prefWidth="498.0" />
+      <ListView layoutX="883.0" layoutY="120.0" prefHeight="200.0" prefWidth="281.0" />
+      <Label layoutX="883.0" layoutY="95.0" prefHeight="17.0" prefWidth="92.0" text="All Online Users" />
    </children>
 </AnchorPane>
