--- a/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
@@ -8,6 +8,7 @@
     <CheckBox fx:id="buyerCheck" layoutX="57.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Buyer"> </CheckBox>
     <CheckBox fx:id="sellerCheck" layoutX="131.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Seller"> </CheckBox>
     <CheckBox fx:id="adminCheck" layoutX="217.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Admin"> </CheckBox>
+    <CheckBox fx:id="assistantCheck" layoutX="280.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Assistant"> </CheckBox>
     <Label layoutX="14.0" layoutY="38.0" text="show:" />
    <ListView fx:id="listView" layoutX="13.0" layoutY="85.0" onMouseClicked="#userSelect" prefHeight="265.0" prefWidth="266.0" />
     <MenuBar prefHeight="25.0" prefWidth="600.0" styleClass="myMenuBar">
