--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -90,8 +90,12 @@
     }
 
     .registerAdminMenu {
-        -fx-background-image: url("design/newRegisterAdmin.png");
+         -fx-background-image: url("design/newRegisterAdmin.png");
     }
+
+     .registerAssistantMenu {
+          -fx-background-image: url("design/newRegisterAssistant.png");
+     }
 
     .loginMenu {
         -fx-background-image: url("design/login.png");
