--- a/src/main/resources/fxml/AssistantRegisterMenu.fxml
+++ b/src/main/resources/fxml/AssistantRegisterMenu.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="registerAdminMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.LoginRegisterController.AssistantRegisterMenu">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="registerAssistantMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.LoginRegisterController.AssistantRegisterMenu">
     <children>
         <TextField fx:id="usernameTextField" layoutX="715.0" layoutY="125.0" prefHeight="25.0" prefWidth="137.0" promptText="Username" styleClass="myTextField" />
         <PasswordField fx:id="passwordField" layoutX="890.0" layoutY="125.0" prefHeight="25.0" prefWidth="149.0" promptText="Password" styleClass="myTextField" />
