--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -22,7 +22,7 @@
                    <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
                    <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
                    <MenuItem onAction="#viewRequests" text="view Requests" />
-                   <MenuItem onAction="#viewAssistants" text="view Assistans" />
+                   <MenuItem onAction="#viewAssistants" text="view Assistants" />
                </Menu>
            </menus>
        </MenuBar>
