--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -22,17 +22,18 @@
          </Menu>
        </menus>
      </MenuBar>
-     <Button layoutX="362.0" layoutY="472.0" mnemonicParsing="false" onAction="#userzone" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="User Zone" />
-      <Button layoutX="574.0" layoutY="304.0" mnemonicParsing="false" onAction="#shop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Shop" />
-     <Button layoutX="774.0" layoutY="472.0" onAction="#cartMenu" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Cart Menu" />
+     <Button layoutX="362.0" layoutY="394.0" mnemonicParsing="false" onAction="#userzone" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="User Zone" />
+      <Button layoutX="574.0" layoutY="128.0" mnemonicParsing="false" onAction="#shop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Shop" />
+     <Button layoutX="777.0" layoutY="212.0" onAction="#cartMenu" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Cart Menu" />
      <Button layoutX="603.0" layoutY="658.0" onAction="#exit" prefHeight="27.0" prefWidth="75.0" styleClass="myBlueButton" text="exit" />
-     <Button fx:id="loginLogout" layoutX="362.0" layoutY="304.0" onMouseClicked="#loginLogout" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="login" />
-     <Button layoutX="574.0" layoutY="472.0" onMouseClicked="#saleShop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="sale shop" />
-       <VBox fx:id="commercial" layoutX="535.0" layoutY="91.0" prefHeight="241.0" prefWidth="211.0" />
+     <Button fx:id="loginLogout" layoutX="362.0" layoutY="212.0" onMouseClicked="#loginLogout" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="login" />
+     <Button layoutX="574.0" layoutY="304.0" onMouseClicked="#saleShop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="sale shop" />
+       <VBox fx:id="commercial" layoutX="55.0" layoutY="63.0" prefHeight="241.0" prefWidth="211.0" />
 <!--       <Button fx:id="nextButton" layoutX="717.0" layoutY="366.0" onMouseClicked="#nextCommercial" styleClass="myBlueButton" text="next" />-->
 <!--       <Button fx:id="previousButton" layoutX="535.0" layoutY="366.0" onMouseClicked="#previousCommercial" styleClass="myBlueButton" text="previous" />-->
        <Label fx:id="slideCount" layoutX="595.0" layoutY="616.0" prefHeight="17.0" prefWidth="90.0" />
-      <Button layoutX="774.0" layoutY="304.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Auctions" />
+      <Button layoutX="574.0" layoutY="477.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Auctions" />
+      <Button layoutX="777.0" layoutY="394.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="File Shop" />
    </children>
 
 </AnchorPane>
