--- a/src/main/resources/fxml/FileShop.fxml
+++ b/src/main/resources/fxml/FileShop.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Project.Client.Menus.MenuController.FileShopController"
-            prefHeight="720.0" prefWidth="1280.0">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.FileShopController">
+            <ListView fx:id="allFiles" layoutY="29.0" onMouseClicked="#fileSelect"> </ListView>
+
+    <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
+        <menus>
+            <Menu fx:id="menu" mnemonicParsing="false" styleClass="myMenuBar" text="option">
+                <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+            </Menu>
+        </menus>
+    </MenuBar>
 
 </AnchorPane>
