--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -33,7 +33,7 @@
 <!--       <Button fx:id="previousButton" layoutX="535.0" layoutY="366.0" onMouseClicked="#previousCommercial" styleClass="myBlueButton" text="previous" />-->
        <Label fx:id="slideCount" layoutX="595.0" layoutY="616.0" prefHeight="17.0" prefWidth="90.0" />
       <Button layoutX="574.0" layoutY="477.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Auctions" />
-      <Button layoutX="777.0" layoutY="394.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="File Shop" />
+      <Button layoutX="777.0" layoutY="394.0" mnemonicParsing="false" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="File Shop" onMouseClicked="#fileShop" />
    </children>
 
 </AnchorPane>
