--- a/src/main/resources/fxml/AllAuctionsMenu.fxml
+++ b/src/main/resources/fxml/AllAuctionsMenu.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="softGreyBackground" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.AllAuctionsMenu">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="51.0" styleClass="myBlueButton" text="Back" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" prefHeight="22.0" prefWidth="51.0" styleClass="myBlueButton" text="Back" />
       <ListView layoutX="389.0" layoutY="142.0" prefHeight="468.0" prefWidth="502.0" />
       <Text layoutX="389.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="All Auctions" wrappingWidth="117.13671875">
          <font>
