--- a/src/main/resources/fxml/SellerMenu/SellerStartAuctionMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerStartAuctionMenu.fxml
@@ -6,7 +6,7 @@
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.SellerMenuController.SellerStartAuction">
    <children>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" styleClass="myBlueButton" text="Back" />
-      <TextField layoutX="526.0" layoutY="129.0" prefHeight="25.0" prefWidth="174.0" styleClass="underlinedTextField" />
+      <TextField editable="false" layoutX="526.0" layoutY="129.0" prefHeight="25.0" prefWidth="174.0" styleClass="underlinedTextField" />
       <ListView layoutX="30.0" layoutY="129.0" prefHeight="338.0" prefWidth="275.0" style="-fx-border-color: #94a8b3;" />
       <Label layoutX="31.0" layoutY="106.0" prefHeight="17.0" prefWidth="100.0" text="All Products" />
       <Label layoutX="460.0" layoutY="133.0" prefHeight="17.0" prefWidth="47.0" text="Item ID:" />
