--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -23,6 +23,7 @@
                </Menu>
                <Menu text="manage">
                    <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
+                   <MenuItem mnemonicParsing="false" onAction="#addFile" text="Add File" />
                    <MenuItem mnemonicParsing="false" onAction="#manageProducts" text="Manage Products" />
                    <MenuItem mnemonicParsing="false" onAction="#manageSales" text="Manage Sales" />
                    <MenuItem mnemonicParsing="false" onAction="#startAuction" text="start auction" />
