--- a/src/main/resources/fxml/SellerMenu/AddFile.fxml
+++ b/src/main/resources/fxml/SellerMenu/AddFile.fxml
@@ -30,5 +30,6 @@
 
     <Label fx:id="priceError" layoutX="501.0" layoutY="428.0" prefHeight="17.0" prefWidth="165.0" />
 
-
+    <Button layoutX="600.0" layoutY="52.0" onMouseClicked="#fileChooser" text="file chooser" />
+    <Label fx:id="filePath" layoutX="716.0" layoutY="58.0" prefHeight="17.0" prefWidth="182.0" />
 </AnchorPane>
