--- a/src/main/resources/fxml/FileShop.fxml
+++ b/src/main/resources/fxml/FileShop.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.FileShopController">
-            <ListView fx:id="allFiles" layoutY="29.0" onMouseClicked="#fileSelect"> </ListView>
+            <ListView fx:id="allFiles" layoutY="29.0" onMouseClicked="#fileSelect" prefHeight="400.0" prefWidth="334.0"> </ListView>
 
     <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
         <menus>
