--- a/src/main/resources/fxml/SellerMenu/AddFile.fxml
+++ b/src/main/resources/fxml/SellerMenu/AddFile.fxml
@@ -12,12 +12,12 @@
             </Menu>
         </menus>
     </MenuBar>
-    <TextField fx:id="itemName" layoutX="338.0" layoutY="52.0" prefHeight="27.0" prefWidth="149.0" promptText="Enter a name" styleClass="underlinedTextField" />
+    <TextField fx:id="itemName" layoutX="338.0" layoutY="52.0" prefHeight="27.0" prefWidth="200.0" promptText="Enter a name" styleClass="underlinedTextField" />
     <Label layoutX="264.0" layoutY="56.0" prefHeight="17.0" prefWidth="66.0" text="file Name:" />
 
     <Label layoutX="267.0" layoutY="160.0" text="Description:" />
     <Label layoutX="298.0" layoutY="428.0" prefHeight="17.0" prefWidth="32.0" text="Price:" />
-    <TextField fx:id="price" layoutX="338.0" layoutY="424.0" prefHeight="27.0" prefWidth="149.0" promptText="Enter a valid price" styleClass="underlinedTextField" />
+    <TextField fx:id="price" layoutX="338.0" layoutY="424.0" prefHeight="27.0" prefWidth="200.0" promptText="Enter a valid price" styleClass="underlinedTextField" />
     <TextArea fx:id="descriptionText" layoutX="338.0" layoutY="160.0" prefHeight="200.0" prefWidth="200.0" />
 
 
@@ -31,4 +31,10 @@
 
     <Button layoutX="600.0" layoutY="52.0" onMouseClicked="#fileChooser" text="file chooser" />
     <Label fx:id="filePath" layoutX="716.0" layoutY="58.0" prefHeight="17.0" prefWidth="496.0" />
+
+
+    <Label fx:id="imageAddress" layoutX="704.0" layoutY="109.0" prefHeight="36.0" prefWidth="381.0" />
+    <Label layoutX="557.0" layoutY="117.0" text="Image" />
+    <Button layoutX="599.0" layoutY="112.0" mnemonicParsing="false" onAction="#imageChooserOpen" prefHeight="25.0" prefWidth="84.0" styleClass="myBlueButton" text="Browse" />
+
 </AnchorPane>
