--- a/src/main/resources/fxml/FileShop.fxml
+++ b/src/main/resources/fxml/FileShop.fxml
@@ -3,15 +3,55 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.FileShopController">
-            <ListView fx:id="allFiles" layoutY="29.0" onMouseClicked="#fileSelect" prefHeight="400.0" prefWidth="334.0"> </ListView>
+<AnchorPane fx:id="pane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Client.Menus.MenuController.FileShopController">
+    <children>
+        <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
+            <menus>
+                <Menu fx:id="menu" mnemonicParsing="false" text="option">
+                    <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                </Menu>
+            </menus>
+        </MenuBar>
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="250.0" layoutY="86.0" prefHeight="569.0" prefWidth="737.0" style="-fx-border-color: #94a8b3;">
+            <content>
+                <GridPane fx:id="gridPane" prefHeight="492.0" prefWidth="723.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                </GridPane>
+            </content></ScrollPane>
+        <ChoiceBox fx:id="sortChoiceBox" layoutX="781.0" layoutY="46.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" styleClass="myBlueButton" />
+        <Label layoutX="746.0" layoutY="51.0" prefHeight="17.0" prefWidth="48.0" style="-fx-text-fill: #5f7782;" text="Sort :" />
+        <Label fx:id="pageNum" layoutX="618.0" layoutY="672.0" prefHeight="27.0" prefWidth="30.0" text="1" textAlignment="CENTER" />
+        <Button fx:id="pageNumReduce" layoutX="569.0" layoutY="672.0" mnemonicParsing="false" onAction="#decreasePage" prefHeight="25.0" prefWidth="30.0" styleClass="myBlueButton" text="-" />
+        <Button fx:id="pageNumAdd" layoutX="668.0" layoutY="673.0" mnemonicParsing="false" onAction="#increasePage" prefHeight="25.0" prefWidth="29.0" styleClass="myBlueButton" text="+" />
+        <ScrollPane layoutX="1004.0" layoutY="86.0" prefHeight="249.0" prefWidth="254.0" style="-fx-border-color: #94a8b3;">
+            <content>
 
-    <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
-        <menus>
-            <Menu fx:id="menu" mnemonicParsing="false" styleClass="myMenuBar" text="option">
-                <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
-            </Menu>
-        </menus>
-    </MenuBar>
+                <Pane prefHeight="243.0" prefWidth="225.0">
 
+                    <CheckBox fx:id="searchCheckBox" layoutX="22.0" layoutY="6.0" onMouseClicked="#filterSearch" />
+                    <Label layoutX="41.0" layoutY="6.0" text="search:" />
+                    <TextField fx:id="search" layoutX="19.0" layoutY="29.0" onKeyReleased="#filterSearchTextChange" promptText="Enter a query" styleClass="underlinedTextField" />
+
+
+                    <CheckBox fx:id="priceCheckBox" layoutX="22.0" layoutY="98.0" onMouseClicked="#priceFilter" />
+                    <Label layoutX="44.0" layoutY="98.0" text="price:" />
+                    <Label layoutX="118.0" layoutY="120.0" text="to" />
+                    <TextField fx:id="maxPrice" layoutX="146.0" layoutY="115.0" onKeyReleased="#filterPriceTextChange" prefHeight="27.0" prefWidth="63.0" promptText="Max." styleClass="underlinedTextField" />
+                    <TextField fx:id="minPrice" layoutX="41.0" layoutY="116.0" onKeyReleased="#filterPriceTextChange" prefHeight="25.0" prefWidth="63.0" promptText="Min." styleClass="underlinedTextField" />
+
+
+                    <CheckBox fx:id="sellerNameCheckBox" layoutX="22.0" layoutY="152.0" onMouseClicked="#sellerFilter" />
+                    <Label layoutX="41.0" layoutY="152.0" text="seller name:" />
+                    <TextField fx:id="sellerName" layoutX="19.0" layoutY="182.0" onKeyReleased="#filterSellerTextChange" promptText="Enter a Seller" styleClass="underlinedTextField" />
+
+
+                </Pane>
+            </content></ScrollPane>
+        <Label layoutX="1004.0" layoutY="60.0" style="-fx-text-fill: #5f7782;" text="Filtering" />
+
+    </children>
 </AnchorPane>
